--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -19,7 +19,7 @@ jobs:
             run: |
                 DOCKER_USERNAME=dragoncrafted87
                 DOCKER_IMAGE=dragoncrafted87/alpine-minecraft
-                DOCKER_PLATFORMS=linux/amd64,linux/arm64
+                DOCKER_PLATFORMS=linux/amd64
 
                 TAGS="--tag ${DOCKER_IMAGE}:edge"
 
