--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -58,3 +58,15 @@ repos:
         -   black
         -   --filter-files
         -   --force-single-line-imports
+#-   repo: https://gitlab.com/pycqa/flake8
+#    rev: 3.9.2
+#    hooks:
+#    -   id: flake8
+#-   repo: https://github.com/PyCQA/pylint
+#    rev: v2.8.3
+#    hooks:
+#    -   id: pylint
+#-   repo: https://github.com/PyCQA/bandit
+#    rev: 1.7.0
+#    hooks:
+#    -   id: bandit
